--- a/index.html
+++ b/index.html
@@ -521,10 +521,9 @@ hr{
                 <br>
                 <small>&copy; Copyright <span id="current_year"></span>, Qi Liu</small>
             </div>
-            <div class="stat">
-                <script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=-23A1GPVvvuNiuBYLygGVwg1KDr82CpUn5H3v7m6J9s"></script>
-                <!--script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=-23A1GPVvvuNiuBYLygGVwg1KDr82CpUn5H3v7m6J9s&cl=ffffff&w=a"></script-->
-            </div>
+            <!--<div class="stat">
+                <script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=-23A1GPVvvuNiuBYLygGVwg1KDr82CpUn5H3v7m6J9s"></script> //id="clustrmaps"
+            </div>-->
         </div>
     </div>
 </div>
